--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# firebase
+firebaseApp.js
+firebaseConfig.js
+.firebaserc
+firebase.json
+database.rules.json
