--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.1",
+    "firebaseui": "^6.0.0",
     "jquery": "^3.6.0",
     "node-sass": "^5.0.0",
     "popper.js": "^1.16.1",
